--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+Configs/botconfig.json
+.idea
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
