--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "set NODE_ENV=development &&  nodemon index.js",
+    "devServer": "set NODE_ENV=development && node index.js",
+    "prod": "set NODE_ENV=development &&  node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,8 @@
     "date": "^1.0.2",
     "discord.js": "^12.5.1",
     "glob": "^7.1.6",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
+    "quick.db": "^7.1.3"
   }
 }
