--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "set NODE_ENV=development &&  nodemon index.js",
+    "devLinux": "NODE_ENV=development nodemon index.js",
     "devServer": "set NODE_ENV=development && node index.js",
     "prod": "set NODE_ENV=development &&  node index.js"
   },
@@ -22,8 +23,10 @@
     "date": "^1.0.2",
     "discord.js": "^12.5.1",
     "glob": "^7.1.6",
-    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "quick.db": "^7.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
