--- a/Configs/productionConfig.json
+++ b/Configs/productionConfig.json
@@ -1,1 +1,11 @@
-{}
+{
+  "welcomeChannelId": "828029522023546890",
+  "suggestionChannelId": "824772853362458646",
+  "bugReportChannelId": "824772894369906688",
+  "logsChannelId": "824771713396768809",
+  "ticket_settings": {
+    "ticketCategoryId": "827606788932239420",
+    "ticketAccessRoles": ["824780897688879134","824781683911163985","826182753334591558"],
+    "everyoneRoleId": "824026103471013978"
+  }
+}
