--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "set NODE_ENV=development &&  nodemon index.js",
     "devLinux": "NODE_ENV=development nodemon index.js",
     "devServer": "set NODE_ENV=development && node index.js",
-    "prod": "set NODE_ENV=production &&  node index.js"
+    "prod": "NODE_ENV=production node index.js"
   },
   "repository": {
     "type": "git",
