--- a/Configs/developmentConfig.json
+++ b/Configs/developmentConfig.json
@@ -3,6 +3,10 @@
   "suggestionChannelId": "827084566275162122",
   "bugReportChannelId": "827084588639453214",
   "logsChannelId": "827945258331013141",
+  "counters": {
+    "memberCounterChannelId": "828683264868352092",
+    "betaTestersCounterChannelId": "828684258125152288"
+  },
   "ticket_settings": {
     "ticketCategoryId": "827663569494605885",
     "ticketAccessRoles": ["827644973103972414","827644994369224706","827645010459230288"],
