--- a/Configs/developmentConfig.json
+++ b/Configs/developmentConfig.json
@@ -4,6 +4,7 @@
   "bugReportChannelId": "827084588639453214",
   "logsChannelId": "827945258331013141",
   "reviewChannelID": "828961420291866696",
+  "defaultRole": "827645010459230288",
   "counters": {
     "memberCounterChannelId": "828683264868352092",
     "betaTestersCounterChannelId": "828684258125152288"
@@ -16,5 +17,8 @@
     "ticketCategoryId": "827663569494605885",
     "ticketAccessRoles": ["827644973103972414","827644994369224706","827645010459230288"],
     "everyoneRoleId": "826562613994324000"
+  },
+  "support_settings": {
+
   }
 }
