--- a/Configs/developmentConfig.json
+++ b/Configs/developmentConfig.json
@@ -16,9 +16,12 @@
   "ticket_settings": {
     "ticketCategoryId": "827663569494605885",
     "ticketAccessRoles": ["827644973103972414","827644994369224706","827645010459230288"],
-    "everyoneRoleId": "826562613994324000"
+    "everyoneRoleId": "826562613994324000",
+    "maxTickets": 3,
+    "ticketsPerUser": 2
   },
   "support_settings": {
-
+    "supportChannelId": "829413767937916991",
+    "supportMessageId": "829502284940967999"
   }
 }
