Added userInfo command
Added leaveEvent

--- a/Configs/developmentConfig.json
+++ b/Configs/developmentConfig.json
@@ -5,6 +5,7 @@
   "logsChannelId": "827945258331013141",
   "reviewChannelID": "828961420291866696",
   "defaultRole": "827645010459230288",
+  "leavesChannelId": "827945258331013141",
   "counters": {
     "memberCounterChannelId": "828683264868352092",
     "betaTestersCounterChannelId": "828684258125152288"
