--- a/Configs/productionConfig.json
+++ b/Configs/productionConfig.json
@@ -5,6 +5,7 @@
   "logsChannelId": "824771713396768809",
   "reviewChannelID": "824777597040721940",
   "defaultRole": "824780404900757535",
+  "leavesChannelId": "831246345221177384",
   "counters": {
     "memberCounterChannelId": "828683740908748801",
     "betaTestersCounterChannelId": "828683960757780511"
