--- a/Configs/productionConfig.json
+++ b/Configs/productionConfig.json
@@ -37,6 +37,7 @@
     "betaTesterGeneralChannelId": "824777499904049222",
     "betaTesterParentCategory": "828700395604934779",
     "betaAccessRoles": ["824780897688879134","824781683911163985","826182753334591558"],
-    "betaTestersMax": 100
+    "betaTestersMax": 100,
+    "maxBetaApplications": 10
   }
 }
