Added rss Parser setting tester

--- a/Configs/developmentConfig.json
+++ b/Configs/developmentConfig.json
@@ -39,5 +39,8 @@
     "betaAccessRoles": ["827644973103972414","827644994369224706","827645010459230288"],
     "betaTestersMax": 100,
     "maxBetaApplications": 10
+  },
+  "parsers_settings": {
+    "channelId": "826562614456614914"
   }
 }
