--- a/Configs/productionConfig.json
+++ b/Configs/productionConfig.json
@@ -38,5 +38,8 @@
     "betaTesterParentCategory": "828700395604934779",
     "betaAccessRoles": ["824780897688879134","824781683911163985","826182753334591558"],
     "betaTestersMax": 100
+  },
+  "parsers_settings": {
+    "channelId": "845622457653133322"
   }
 }
