--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "luxon": "^1.26.0",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
-    "quick.db": "^7.1.3"
+    "quick.db": "^7.1.3",
+    "request": "^2.88.2",
+    "rss-parser": "^3.12.0",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
