--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/UniStudents/unistudents-bot#readme",
   "dependencies": {
+    "@poiw/saffron": "^1.1.8",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.9",
     "date": "^1.0.2",
@@ -27,12 +28,13 @@
     "discord.js": "^12.5.1",
     "glob": "^7.1.6",
     "luxon": "^1.26.0",
+    "mongodb": "^4.0.0",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "quick.db": "^7.1.3",
     "request": "^2.88.2",
     "rss-parser": "^3.12.0",
-    "striptags": "^3.1.1"
+    "striptags": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
