--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/UniStudents/unistudents-bot#readme",
   "dependencies": {
-    "@poiw/saffron": "^1.9.3",
+    "@poiw/saffron": "1.11.2",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.9",
     "date": "^1.0.2",
