--- a/Configs/productionConfig.json
+++ b/Configs/productionConfig.json
@@ -41,8 +41,10 @@
     "maxBetaApplications": 10
   },
   "linksCheckSettings": {
-    "whiteListedLinks": ["https://cyberglitch.me/"],
-    "whiteListedChannels": ["975349855209803797"],
+    "whiteListedLinks": ["https://cyberglitch.me/","https://google.com/","https://github.com/","https://gr.linkedin.com/", "https://linkedin.com/"],
+    "whiteListedChannels": ["935839353803005983"],
+    "whiteListedCategories": ["935839353803005983"],
+    "useGoogleWebRiskApi": true,
     "bypassPerm": 3
   },
   "contributors_settings": {
