--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/UniStudents/unistudents-bot#readme",
   "dependencies": {
+    "@google-cloud/web-risk": "^2.2.0",
     "@poiw/saffron": "2.1.2",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.9",
     "date": "^1.0.2",
     "discord-paginationembed": "^2.1.0",
     "discord.js": "^12.5.1",
+    "dotenv": "^16.0.1",
     "glob": "^7.1.6",
     "luxon": "^1.26.0",
     "mongodb": "^4.0.0",
